--- a/Ejercicio 18 de mayo de 2020/Ejercicio TC2 - 18 de Mayo de 2020.ipynb
+++ b/Ejercicio 18 de mayo de 2020/Ejercicio TC2 - 18 de Mayo de 2020.ipynb
@@ -49,9 +49,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $~T_{LP} = \\frac{S^{2}+ \\omega_{z}^2 }{S^3 + 2 S^2+2S +1 } \\Rightarrow \\omega_{z}= 3\\Rightarrow $\n",
+    "## A partir del gráfico veo:  $~\\rightarrow~T_{LP} = \\frac{S^{2}+ \\omega_{z}^2 }{S^3 + 2 S^2+2S +1 } \\Rightarrow \\omega_{z}= 3\\Rightarrow $\n",
     "\n",
-    "## $~T_{LP} =K \\frac{S^{2}+ 9 }{S^3 + 2 S^2+2S +1 } \\Rightarrow ~con~ T_{LP}(0) \\rightarrow K=\\frac{1}{9}$ "
+    "## (sigue) $~ \\rightarrow ~T_{LP} =K \\frac{S^{2}+ 9 }{S^3 + 2 S^2+2S +1 } \\Rightarrow ~con~ T_{LP}(0) \\rightarrow K=\\frac{1}{9}$ "
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $~T_{HP}=\\frac{\\frac{1}{S^2}+9}{\\frac{1}{\\$^3}+\\frac{2}{\\$^2}+\\frac{2}{S}+1}\\Rightarrow\n",
+    "## Pasa Alto $~\\rightarrow~T_{HP}=\\frac{\\frac{1}{S^2}+9}{\\frac{1}{\\$^3}+\\frac{2}{\\$^2}+\\frac{2}{S}+1}\\Rightarrow\n",
     "T_{HP}=\\frac{\\frac{9\\$^2+1}{\\$^2}}{\\frac{\\$^3 + 2\\$^2+2\\$ +1}{\\$^2}}\\Rightarrow\n",
     "T_{HP}=\\left \\{ \\frac{9\\$^2+1}{\\$^3 + 2\\$^2+2\\$ +1} \\right \\}$"
    ]
